<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_google"
            android:id="@+id/radio_google"
            android:tag="@string/tag_google"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/radio_yandex"
            android:id="@+id/radio_yandex"
            android:tag="@string/tag_yandex"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_bing"
            android:id="@+id/radio_bing"
            android:tag="@string/tag_bing"/>
    </RadioGroup>
</LinearLayout>